# devlogger

./: .gitignore  Cargo.toml  README.md  justfile
DEVLOG/: main-devlog.md
DEVLOG/mcp/: mcp-devlog.md
skill/devlogger/: SKILL.md
src/: cli.rs  commands.rs  entry.rs  lib.rs  main.rs  section.rs  store.rs
src/mcp/: args.rs  claude_code_race_workaround.rs  convert.rs  mod.rs  server.rs
tests/: cli_tests.rs  integration.rs  mcp.rs  unit_tests.rs
tests/cli_tests/: global_file_flag.rs  help_and_version.rs  list_parse.rs  mod.rs  move_parse.rs  new_parse.rs  read_parse.rs  sections_parse.rs  update_parse.rs
tests/integration/: common.rs  concurrency.rs  duplicate_numbers.rs  edge_cases.rs  entry_text.rs  error_messages.rs  file_layout.rs  help_output.rs  line_endings.rs  list_flow.rs  mod.rs  move_flow.rs  new_flow.rs  numbering.rs  read_flow.rs  section_flow.rs  sections_flow.rs  update_flow.rs
tests/mcp/: args_schema.rs  base_dir.rs  common.rs  concurrency.rs  convert_roundtrip.rs  e2e_all_tools_errors.rs  e2e_all_tools_happy.rs  e2e_base_dir.rs  e2e_binary_cli.rs  e2e_common.rs  e2e_concurrency.rs  e2e_handshake.rs  e2e_inprocess_duplex.rs  e2e_large_payload.rs  e2e_lifecycle.rs  e2e_logging.rs  e2e_schemas.rs  e2e_stdout_cleanliness.rs  e2e_timing.rs  errors.rs  mod.rs  registration.rs  result_shape.rs  tool_list.rs  tool_move.rs  tool_new.rs  tool_read.rs  tool_sections.rs  tool_update.rs
tests/unit_tests/: dst_round_trip.rs  entry_formatter.rs  entry_parser.rs  entry_text_validation.rs  entry_truncation.rs  line_ending_detection.rs  mod.rs  store_locking.rs  (+2 more)
