[package]
name = "devlogger"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
