[package]
name = "devlogger"
version = "1.3.1"
edition = "2024"

[[bin]]
name = "devlogger"
path = "src/main.rs"

[[bin]]
name = "devlogger-mcp"
path = "src/bin/devlogger-mcp.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6"
fs2 = "0.4"
indoc = "2"
unicode-width = "0.2"
rmcp = { version = "1.4", features = [
    "server",
    "macros",
    "transport-io",
    "client",
    "transport-child-process",
] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "sync", "time"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
